--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using ProyectoTravelCan_1
-@using ProyectoTravelCan_1.Models
+﻿@using ProyectoTravelCan
+@using ProyectoTravelCan.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
