--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,57 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Bienvenido</h1>
 </div>
+
+<div class="bd-example">
+    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+        <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcR8VMwOw379e3AtFfqhUerOiniE6xi4LVO2X0VCfLk91nH7ogVL" height="800" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Viaje con nosotros</h5>
+            <p>Estas personas disfrutaron de la caminata hacia la catarata velo de novia junto a sus amigos peludos</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="https://scontent.flim5-2.fna.fbcdn.net/v/t1.0-9/74231809_941215849568916_1782902248112652288_o.jpg?_nc_cat=101&_nc_oc=AQk4NyrBmckgC8Xs94b6UyeTtgJZZ76Kt5KOIPp6gk0lzZmfZuRzNj_C7Ox3WMuKFWo&_nc_ht=scontent.flim5-2.fna&oh=f66b3a806fc3aa4a620d553cb6069156&oe=5E59CDB6" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>No te arrepentirás</h5>
+            <p style="color: black;"> <strong>Juan y Marcela disfrutaron junto a Firu</strong></p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="https://scontent.flim5-4.fna.fbcdn.net/v/t1.0-9/74237753_936774143346420_6098672067886972928_o.jpg?_nc_cat=102&_nc_oc=AQl_D-_jQfTTVvkr5qFAj1dEPBrUjQL3pLzgwmWV1E5yRO6CRr42qVyWamcwXr5bdYg&_nc_ht=scontent.flim5-4.fna&oh=7953a6a336c7fcb10bada6052819a278&oe=5E17F753" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Una Imagen dice mas que mil palabras</h5>
+            <p>Dale el bienestar que se merecen</p>
+          </div>
+        </div>
+
+      
+      <div class="carousel-item">
+        <img src="https://scontent.flim5-2.fna.fbcdn.net/v/t1.0-9/73145175_930301947326973_9037588175584755712_o.jpg?_nc_cat=100&_nc_oc=AQlWB9LOxFSOvs-7a6vTKYFeWaKK6Y1zq5Y2foDSuw-CB5Pix5TlXaRtt_22odOD2Qw&_nc_ht=scontent.flim5-2.fna&oh=118a1d6ae8e36845d80d85e14383947f&oe=5E5F83EF" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Una Imagen dice mas que mil palabras</h5>
+          <p>Dale el bienestar que se merecen</p>
+        </div>
+      </div>
+      
+    </div>
+      <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
