--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using ProyectoTravelCan
+﻿﻿@using ProyectoTravelCan
 @using ProyectoTravelCan.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
