--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -35,6 +35,31 @@
                         </li>
                     </ul>
                 </div>
+                @if (User.Identity.IsAuthenticated) {
+                     <li class="nav-item">
+                        <a class="nav-link text-dark" href="~/cuenta/logout">Cerrar sesión</a>
+                    </li>
+                    
+                 }
+                 
+                 else {
+                     <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                    <ul class="navbar-nav flex-grow-1">    
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Cuenta" asp-action="Crear">Crear cuenta</a>
+                            </li>
+                    </ul>
+                    </div>
+                    <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                    <ul class="navbar-nav flex-grow-1"> 
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Cuenta" asp-action="Login">Iniciar sesión</a>
+                            </li>
+                    </ul>
+                    </div>
+                   
+                 }
+
             </div>
         </nav>
     </header>
