--- a/Views/Home/Detalle.cshtml
+++ b/Views/Home/Detalle.cshtml
@@ -3,6 +3,9 @@
     body{
       background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcR5Do3FbKWYX2XO7PyLZmYPCoHGGb7D4z9OOpv0mSwgJmyhnSVw);
     }
+    h5{
+      font-size: 15px;
+    }
 </style>
 @foreach(var v in Model){
     <img src="@v.Foto" class="card-img-top" alt="...">
