--- a/Views/Home/Buscar.cshtml
+++ b/Views/Home/Buscar.cshtml
@@ -11,7 +11,7 @@
 @if (Model.Count() == 0)
   {
     <figure class="figure">
-      <figcaption class="figure-caption, bg danger" style="color: red;">No tiene viajes reservado o inserto mal su correo electronico</figcaption>
+      <figcaption class="figure-caption, bg danger" style="color: red;">No tiene viajes reservado o  su correo electronico es incorrecto</figcaption>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcRsoJwo2Y4oR9QTNBXHhlJH7Vs1QApWwmW8X2BZ34yHLxg3nHQ_" class="figure-img img-fluid rounded" alt="...">
     
     </figure>
