--- a/Views/Home/Experiencias.cshtml
+++ b/Views/Home/Experiencias.cshtml
@@ -15,6 +15,8 @@
     </div>
     }
 </div>
-<a asp-controller="Cuenta" asp-action="RegistrarExperiencia" class="badge badge-secondary">Cuentanos tu experiencia</a>
+@if (!User.IsInRole("Administrador")){
+<a asp-controller="Cuenta" asp-action="RegistrarExperiencia" class="btn btn-outline-info" >Cuentanos tu experiencia</a>
+}
 
 
