--- a/Views/Home/Tarjeta.cshtml
+++ b/Views/Home/Tarjeta.cshtml
@@ -19,13 +19,14 @@
         </div>
         <div class="form-group">
             <label asp-for="CVV">CODIGO DE SEGURIDAD:</label>
-            <input asp-for="CVV" class="form-control" maxlength="3" placeholder="CVV">
+            <input asp-for="CVV" class="form-control"  minlength="1" maxlength="3" placeholder="CVV">
         </div>
         <div class="form-group">
         <label asp-for="NombreEnTarjeta">NOMBRE EN LA TARJETA: </label>
         <input asp-for="NombreEnTarjeta" class="form-control" placeholder="Nombre en la Tarjeta">
         </div>
         <button type="submit" class="btn btn-success">TERMINAR</button>
+        
 </form>
 </div>
 </div>
