--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -26,6 +26,12 @@
         background-repeat:no-repeat;
         background-size:cover;
     }
+    footer{
+        margin-top: 50px;
+        width: 100%;
+        height: 200px;
+        
+    }
 </style>
 <body>
     <header>
@@ -116,16 +122,18 @@
         <div class="d-flex justify-content-center">
   
             <a target="_blank" href="https://www.facebook.com/TravelcanPeru4/">
-                <img height="27" width="29" src="~/face.png" alt="">
+                <img height="42" width="45" src="~/face.png" alt="">
             </a>
 
             <a target="_blank" href="https://api.whatsapp.com/send?phone=51921815193&text=HOLA!%20DESEO%20INFORMACIÓN!">
-                <img height="27" width="29" src="~/wsp.png" alt="">
+                <img height="43" width="45" src="~/wsp.png" alt="">
             </a>
+            <div class="d-flex justify-content-center">
+            <p> &copy; 2019 - TravelCan - <a asp-area="" asp-controller="Home" asp-action="AcercaDe">TravelCan 🐾 </a>
+            </p>
         </div>
-        <div class="container">
-            &copy; 2019 - TravelCan - <a asp-area="" asp-controller="Home" asp-action="AcercaDe">TravelCan 🐾 </a>
         </div>
+        
     </footer>
 
     <environment include="Development">
